# DasherCore

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CI_FIX_STATUS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  build.cmd  debug-linux.sh  run_tidy.sh  settings_manifest.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  cmake-multi-platform.yml  dco.yml  release.yml
Data/alphabets/: ConvertAlphabet.py  alph.english.xml  alphabet.dtd  alphabet.english.without.punctuation.xml
Data/colors/: color.blue.on.dark.green.xml  color.default.xml  color.europeanasian.for.colourblind.xml  color.europeanasian.original.xml  color.rainbow.xml  color.thai.xml  color.turbolut.xml  color.vowels.xml  color.vowels2.xml  color.yellow.on.black.xml  color.yellow.on.blue.xml
Data/colours/: ParseColors.py  color.default.xml  color.dtd  colour.default.dark.xml  colour.euroasian.dark.xml  colour.euroasian2.dark.xml  colour.rainbow.dark.xml  colour.thai.dark.xml  colour.turbo.dark.xml  colour.turbo.xml  colour.vowels.dark.xml  colour.vowels2.dark.xml
Data/training/: gamemode_en_Latn.txt  training_wa_aa_Latn.txt  training_wa_ab_Cyrl.txt  training_wa_ady_Cyrl.txt  training_wa_af_Latn.txt  training_wa_agq_Latn.txt  training_wa_ak_Latn.txt  training_wa_am_Ethi.txt  training_wa_an_Latn.txt  training_wa_ar_Arab.txt  training_wa_arn_Latn.txt  training_wa_as_Beng.txt  training_wa_asa_Latn.txt  training_wa_ast_Latn.txt  training_wa_ay_Latn.txt  training_wa_az_Cyrl.txt  training_wa_az_Latn.txt  training_wa_ba_Cyrl.txt  training_wa_bal_Arab.txt  training_wa_bal_Latn.txt  training_wa_ban_Latn.txt  training_wa_bas_Latn.txt  training_wa_bax_Bamu.txt  training_wa_be_Cyrl.txt  training_wa_be_x-old.txt  training_wa_bem_Latn.txt  training_wa_bew_Latn.txt  training_wa_bez_Latn.txt  training_wa_bg_Cyrl.txt  training_wa_bgc_Deva.txt  training_wa_bgn_Arab.txt  training_wa_bho_Deva.txt  training_wa_bku_Latn.txt  training_wa_bm_Latn.txt  training_wa_bm_Nkoo.txt  training_wa_bn_Beng.txt  training_wa_bo_Tibt.txt  training_wa_br_Latn.txt  training_wa_brx_Deva.txt  training_wa_bs_Latn.txt  (+303 more)
Scripts/: extract_strings.py  generate_alphabets.py  generate_parameters.py  generate_training.py  test_pipeline.py
Src/Common/: AppSettingsData.h  AppSettingsHeader.h  Common.h  Globber.cpp  Globber.h  I18n.h  ModuleSettings.h  OpenGLScreen.h  SBTree.cpp  SBTree.h  Trace.cpp  Trace.h  myassert.h
Src/DasherCore/: AbstractXMLParser.cpp  AbstractXMLParser.h  ActionManager.h  ActionModule.h  Actions.cpp  Actions.h  AlphabetManager.cpp  AlphabetManager.h  AlternatingDirectMode.cpp  AlternatingDirectMode.h  AutoSpeedControl.cpp  AutoSpeedControl.h  BasicLog.cpp  BasicLog.h  ButtonMode.cpp  ButtonMode.h  ButtonMultiPress.cpp  ButtonMultiPress.h  CannaConversionHelper.h  CircleStartHandler.cpp  CircleStartHandler.h  ClickFilter.cpp  ClickFilter.h  ColorIO.cpp  ColorIO.h  ColorPalette.cpp  ColorPalette.h  ColourIO.cpp  ColourIO.h  CompassMode.cpp  CompassMode.h  ControlManager.cpp  ControlManager.h  ConversionManager.cpp  ConversionManager.h  ConvertingAlphMgr.cpp  ConvertingAlphMgr.h  CustomColours.h  DashIntfScreenMsgs.cpp  DashIntfScreenMsgs.h  (+106 more)
Strings/: strings_af.json  strings_ar.json  strings_bn.json  strings_cs.json  strings_da.json  strings_de.json  strings_el.json  strings_en.json  strings_es.json  strings_fa.json  strings_fi.json  strings_fr.json  strings_gu.json  strings_hi.json  strings_hu.json  strings_it.json  strings_kn.json  strings_ml.json  strings_mr.json  strings_nl.json  strings_pa.json  strings_pl.json  strings_pt-PT.json  strings_pt.json  strings_ru.json  strings_sv.json  strings_sw.json  strings_ta.json  strings_te.json  strings_th.json  strings_ur.json  strings_zh-CN.json  strings_zu.json
build-san/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dasher_alphabet_map_tests  dasher_alphabet_xml_tests  dasher_capi_tests  dasher_color_math_tests  dasher_coordinates_tests  dasher_deterministic_tests  dasher_draw_command_tests  dasher_draw_snapshot_tests  dasher_extended_tests  dasher_interaction_tests  dasher_language_model_tests  dasher_lifecycle_tests  dasher_low_memory_tests  dasher_multilingual_tests  dasher_node_tree_tests  dasher_parameter_tests  dasher_ppm_golden_tests  dasher_ppm_serialization_tests  dasher_settings_xml_tests  dasher_training_tests  dasher_utf_conversion_tests
docs/: ARCHITECTURE.md  CUSTOM_ACTIONS.md  C_API.md  LM_REGISTRY.md
src/: CAPI.cpp  dasher.h
src/DasherCore/: AbstractXMLParser.cpp  AbstractXMLParser.h  ActionManager.h  Actions.cpp  Actions.h  AlphabetManager.cpp  AlphabetManager.h  AlternatingDirectMode.cpp  AlternatingDirectMode.h  AutoSpeedControl.cpp  AutoSpeedControl.h  BasicLog.cpp  BasicLog.h  ButtonMode.cpp  ButtonMode.h  ButtonMultiPress.cpp  ButtonMultiPress.h  CannaConversionHelper.cpp  CannaConversionHelper.h  CircleStartHandler.cpp  CircleStartHandler.h  ClickFilter.cpp  ClickFilter.h  ColorIO.cpp  ColorIO.h  ColorPalette.cpp  ColorPalette.h  CompassMode.cpp  CompassMode.h  ControlManager.cpp  ControlManager.h  ConversionManager.cpp  ConversionManager.h  ConvertingAlphMgr.cpp  ConvertingAlphMgr.h  DashIntfScreenMsgs.cpp  DashIntfScreenMsgs.h  DashIntfSettings.cpp  DashIntfSettings.h  DasherButtons.cpp  (+108 more)
tests/: test_alphabet_map.cpp  test_alphabet_xml.cpp  test_benchmarks.cpp  test_capi.cpp  test_capi_buffer_lifetime.cpp  test_capi_extended.cpp  test_color_math.cpp  test_common.h  test_control_actions.cpp  test_control_actions_navigation.cpp  test_coordinates.cpp  test_deterministic.cpp  test_draw_commands.cpp  test_draw_snapshots.cpp  test_input_filters.cpp  test_interaction.cpp  test_language_models.cpp  test_lifecycle.cpp  test_lm_correctness.cpp  test_low_memory.cpp  test_multilingual.cpp  test_node_tree.cpp  test_parameters.cpp  test_ppm_golden.cpp  test_ppm_serialization.cpp  test_property_invariants.cpp  test_reset_settings.cpp  test_settings_xml.cpp  test_spell_word.cpp  test_training.cpp  test_utf_conversion.cpp  test_view_geometry.cpp  test_xml_error_paths.cpp
(+420 files in other folders)
